[package]
name = "tunnelagent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tunnelagent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
fuser = { version = "0.14", default-features = false }
libc = "0.2"
ignore = "0.4"
